assets/css/main.scss
/* ... */
#videoRoute {
  left: 0;
  border-bottom-right-radius: $videoInfoOverlayPadding;
  font-weight: bold;
  padding-left: $videoInfoOverlayPadding;
  padding-left: max($videoInfoOverlayPadding, env(safe-area-inset-left));
}

#videoRecordingDate {
  right: 0;
  border-bottom-left-radius: $videoInfoOverlayPadding;
  display: none;
}

$videoBarHeight: 2.6rem;
$videoBarBtnMargin: 0.3rem;
$videoBarProgressHeight: 0.4rem;
#videoControls {
  height: $videoBarHeight;
  left: 0;
  bottom: 0;
  position: absolute;
  width: 100%;

  background: rgba(0, 0, 0, 0.6);
  display: flex;

  padding-bottom: 0;
  padding-bottom: env(safe-area-inset-bottom);

  button {
    border: 0;

    height: $videoBarHeight - 2*$videoBarBtnMargin;
    width: $videoBarHeight - 2*$videoBarBtnMargin;
    margin: $videoBarBtnMargin;
    overflow: hidden;
    float: left;
    color: #fff;
    background: transparent;
    font-weight: bold;
    font-size: 1.2rem;
    line-height: $videoBarHeight - 2*$videoBarBtnMargin;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    position: relative;

    &.disabled {
      cursor: default;

      &::before {
        position: absolute;
        content: "";
        left: $videoBarBtnMargin;
        top: 50%;
        right: 0;
        border-top: 2px solid;
        border-color: $red;
        width: 1.5rem;
        transform:rotate(-45deg);
      }
    }

    &:not(.disabled):hover, &:not(.disabled):hover {
      @media (hover: hover) {
        color: $red;
        filter: $redColorFilter;
      }
    }
  }

  #playpause {
    background: url("/images/play.svg") no-repeat center center;
    background-size: calc($videoBarHeight / 3);
  }

  #fullscreen {
    background: url("/images/fullscreen.svg") no-repeat center center;
    background-size: calc($videoBarHeight / 2.7);
  }

  #reverse {
    background: url("/images/reverse.svg") no-repeat center center;
    background-size: calc($videoBarHeight / 2.7);
  }

  #skipBackward5 {
    background: url("/images/skip_backward_5.svg") no-repeat center center;
    background-size: calc($videoBarHeight / 2.2);
  }

  #skipForward5 {
    background: url("/images/skip_forward_5.svg") no-repeat center center;
    background-size: calc($videoBarHeight / 2.2);
  }

  #duration {
    height: $videoBarHeight - 2*$videoBarBtnMargin;
    line-height: $videoBarHeight - 2*$videoBarBtnMargin;
    text-align: center;
    color: #888;
    margin: $videoBarBtnMargin 0;

    #current {
      color: #fff;
    }
  }

  #progressWrapper {
    display: block;
    float: left;
    flex: 2;
    height: $videoBarHeight - 4*$videoBarBtnMargin;
    margin: 2*$videoBarBtnMargin $videoBarBtnMargin;
    cursor: pointer;
  }

  progress {
    width: 100%;
    height: $videoBarProgressHeight;
    border: none;
    margin: calc(($videoBarHeight - 4*$videoBarBtnMargin - $videoBarProgressHeight)/2) 0;
    color: $red;
    border-radius: $videoBarProgressHeight;
    background: #000;
    background: linear-gradient(90deg, #444 var(--loaded, 0%), #000 var(--loaded, 0%));
    user-select: none;

    &::-webkit-progress-bar {
      background: linear-gradient(90deg, #444 var(--loaded, 0%), #000 var(--loaded, 0%));
      border-radius: $videoBarProgressHeight;
    }

    &::-moz-progress-bar {
      border-radius: $videoBarProgressHeight;
      background-color: $red;
    }
    &::-webkit-progress-value {
      border-radius: $videoBarProgressHeight;
      background-color: $red;
    }
  }
}

@media (min-width: calc(2*$minWidth)) {
  #skipBackward5, #skipForward5 {
    display: block !important;
  }

  #layerSwitcher {
    display: block !important;
  }
}

#videoOuter[data-state="pause"] #playpause {
  background: url("/images/pause.svg") no-repeat center center;
  background-size: calc($videoBarHeight / 4);
}

#layerSwitcher, #videoOptions {
  > div {
    // visibility: visible !important; // toggle
    // opacity: 1 !important; // toggle

    opacity: 0;
    visibility: collapse;

    transition: opacity 0.2s ease-in-out, visibility 0.2s;
    transition-delay: 250ms;
  }

  &:not(.hidden):hover > div {
    visibility: visible;

    opacity: 1;
    transition-delay: 0ms;
    pointer-events: inherit;
  }
}
/* ... */

